# ushrt

./: .gitignore  README.md  config.example.py  pyproject.toml  run_debug.py
app/: __init__.py  exts.py
app/api/: models.py  routes.py
app/front/: routes.py
app/templates/: index.html
