[tool.poetry]
name = "ushrt"
version = "0.1.0"
description = ""
authors = ["ziment <ziment33@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.2"
flask-sqlalchemy = "^3.0.4"
hashids = "^1.3.1"
validators = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
